[tool.poetry]
name = "blacklist_tg_bot"
version = "0.1.0"
description = ""
authors = ["MargoRSq <49024821+MargoRSq@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
python-telegram-bot = "^13.7"
starlette = "^0.15.0"
autopep8 = "^1.5.7"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "1.4.22"

[tool.poetry.dev-dependencies]
black = {version = "^21.8b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
